monitor/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitor-service
  namespace: sealci
spec:
  selector:
    app: monitor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
