monitor/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-ingress
  namespace: sealci
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
    - host: monitor.baptistebronsin.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitor-service
                port:
                  number: 80
  tls:
    - secretName: monitor-tls
      hosts:
        - monitor.baptistebronsin.be
